WIP, switched to 'require_once', started on pg class.

--- a/server/mpm_server.creds.sample
+++ b/server/mpm_server.creds.sample
@@ -1,7 +1,9 @@
 <?php
-$pgdb_host = 'localhost';
-$pgdb_port = '5432';
-$pgdb_dbname = 'mydb_name';
-$pgdb_user = 'username';
-$pgdb_password = 'password';
+
+require_once 'DBConnection.php';
+
+$g_dbconn_ro = new DBConnection ('localhost', 5432, 'mydb_name', 'rouser', 'ro12345');
+$g_dbconn_rw = new DBConnection ('localhost', 5432, 'mydb_name', 'rwuser', 'rw12345');
+
 ?>
+
